Unity/Assets/akanevrc/TeuchiUdon/Tests/src/BinaryOps/Assign2.teuchi
// error
x = 100;
x <- 200;
